[gd_scene load_steps=7 format=2]

[ext_resource path="res://interface/Chatbox.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/Fonts/PatrickHand-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 8
extra_spacing_space = 2

[sub_resource type="DynamicFont" id=4]
size = 6
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 6
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 7
extra_spacing_space = 1
font_data = ExtResource( 2 )

[node name="Chatbox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 180, 90 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 180, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 76.0
rect_min_size = Vector2( 320, 76 )

[node name="ChatLog" type="NinePatchRect" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 320.0
margin_bottom = 152.0
rect_min_size = Vector2( 172, 72 )
mouse_filter = 0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ChatLog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -148.0
margin_bottom = -12.0
rect_min_size = Vector2( 172, 60 )
mouse_filter = 1
custom_fonts/mono_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerChat" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 320.0
margin_bottom = 180.0
rect_min_size = Vector2( 172, 24 )

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/PlayerChat"]
margin_right = 20.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 24 )
custom_fonts/font = SubResource( 5 )
text = "All"

[node name="TextEdit" type="LineEdit" parent="VBoxContainer/PlayerChat"]
margin_left = 24.0
margin_right = 172.0
margin_bottom = 24.0
rect_min_size = Vector2( 148, 20 )
focus_mode = 1
custom_fonts/font = SubResource( 2 )
max_length = 100
[connection signal="focus_entered" from="VBoxContainer/PlayerChat/TextEdit" to="." method="_on_TextEdit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/PlayerChat/TextEdit" to="." method="_on_TextEdit_focus_exited"]
